added all joined table routes

--- a/src/server/views/books.html
+++ b/src/server/views/books.html
@@ -14,6 +14,7 @@
     <h1>{{ title.title }}</h1>
     <h4>{{ title.genre }}</h4>
     <p>{{ title.description }}</p>
+    <h4>{{ title.name }}</h4>
     
 {% endfor %}
   </div>
