--- a/src/server/views/editauthor.html
+++ b/src/server/views/editauthor.html
@@ -27,7 +27,7 @@
   </div>
 
   <h3>Books</h3>
-<input type="cuisine" value="Books" name="books"></input>
+<input type="cuisine" value="{{authors.title}}" name="books"></input>
 <br>
 <br>
       <input class="btn btn-md btn-primary btn-block" type="submit" value='Submit'/>
