--- a/src/server/views/editbook.html
+++ b/src/server/views/editbook.html
@@ -30,7 +30,7 @@
   </div>
 
   <h3>Author</h3>
-<input type="cuisine" value="Author" name="author"></input>
+<input type="cuisine" value="{{books.name}}" name="author"></input>
 <br>
 <br>
       <input class="btn btn-md btn-primary btn-block" type="submit" value='Submit'/>
