--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -16,6 +16,15 @@
 
   </div>
 </nav>
+
+<div class="container">
+  <div class="row">
+      <div class="col-md-6"><a href="/books"><input class="btn btn-sm btn-primary btn-block col-md-6"  value='Books'/></a>
+      </div>
+      <div class="col-md-6"><a href="/authors"><input class="btn btn-sm btn-primary btn-block col-md-4"  value='Authors'/></a> 
+      </div>
+</div>
+</div>  
     {% block content %}
     {% endblock %}
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
