joined table set up

--- a/src/server/views/newbook.html
+++ b/src/server/views/newbook.html
@@ -28,6 +28,17 @@
 
   <h3>Author</h3>
 <input type="cuisine" placeholder="Author" name="author"></input>
+
+<h3>Author's Image</h3>
+<input type="cuisine" placeholder="Image URL" name="image" ></input>
+
+
+<h3>Author's Biography</h3>
+  <div class="form-group">
+    <label for="inputlg"></label>
+    <input class="form-control input-lg" id="inputlg" name="biography" type="text">
+  </div>
+
 <br>
 <br>
       <input class="btn btn-md btn-primary btn-block" type="submit" value='Submit'/>
