--- a/src/server/views/authors.html
+++ b/src/server/views/authors.html
@@ -14,7 +14,7 @@
     <h1>{{ title.name }}</h1>
     <h4>{{ title.biography }}</h4>
 
-    <h4>{{ title.title }}</h4>
+    <a href="/books/{{title.id}}"><h4>{{ title.title }}</h4></a>
 
 {% endfor %}
   </div>
