--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -25,3 +25,86 @@ img{
 .container{
 	margin-top: 50px;
 }
+
+/**{
+    font-family: 'Open Sans', sans-serif;
+}
+
+.well {
+    margin-top:-20px;
+    background-color:#007FBD;
+    border:2px solid #0077B2;
+    text-align:center;
+    cursor:pointer;
+    font-size: 25px;
+    padding: 15px;
+    border-radius: 0px !important;
+}
+
+.well:hover {
+    margin-top:-20px;
+    background-color:#0077B2;
+    border:2px solid #0077B2;
+    text-align:center;
+    cursor:pointer;
+    font-size: 25px;
+    padding: 15px;
+    border-radius: 0px !important;
+    border-bottom : 2px solid rgba(97, 203, 255, 0.65);
+}
+
+body {
+font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size: 14px;
+line-height: 1.42857143;
+color: #fff;
+background-color: #F1F1F1;
+}
+
+.bg_blur{
+	width: 250px;
+}
+
+.template_img {
+	height: 300px;
+	margin-left: 60px;
+    background-size: cover;
+    
+}
+
+.header{
+    color : #808080;
+    margin-left:10%;
+    margin-top:70px;
+}
+
+.picture{
+    height:150px;
+    width:150px;
+    position:absolute;
+    top: 75px;
+    left:-75px;
+}
+
+.picture_mob{
+    position: absolute;
+    width: 35%;
+    left: 35%;
+    bottom: 70%;
+}
+
+@media (max-width: 767px) {
+    .header{
+        text-align : center;
+    }
+
+    .col-md-4{
+        text-decoration-color: green;
+
+    }
+    
+    
+    .nav{
+        margin-top : 30px;
+    }
+}*/
