--- a/src/server/views/books.html
+++ b/src/server/views/books.html
@@ -16,8 +16,33 @@
     <p>{{ title.description }}</p>
     <a href="/authors/{{title.id}}"><h4>{{ title.name }}</h4></a>
     
+<!-- <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
+	<div class="row panel">
+		<div class="col-md-4 bg_blur ">
+		    <img src="{{title.image}}" class="template_img hidden-xs" />
+		</div>
+        <div class="col-md-8  col-xs-12">
+           <div class="header">
+                <h1>{{title.title}}</h1>
+                <h4>{{ title.genre }}</h4>
+                <span>{{title.description }}</span>
+                <h3>Author: <a href="/authors/{{titile.id}}">{{title.name}}</a></h3>
+           </div>
+        </div>
+    </div>   
+    
+	<div class="row nav">    
+        <div class="col-md-4"></div>
+        <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px;">
+         
+            <div class="col-md-4 col-xs-4 well"><i class="fa fa-weixin fa-lg"></i>     <a href="/books/{{title.id}}/edit">Edit</a>
+            </div>
+            <div class="col-md-4 col-xs-4 well"><i class="fa fa-heart-o fa-lg"></i>     <a href="/books/{{title.id}}/delete">Remove</a>
+            </div>
+    
+        </div>
+    </div>
+</div>
 {% endfor %}
-  </div>
-
-
+</div>
 {% endblock %}
