--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -19,9 +19,9 @@
 
 <div class="container">
   <div class="row">
-      <div class="col-md-6"><a href="/books"><input class="btn btn-sm btn-primary btn-block col-md-6"  value='Books'/></a>
+      <div class="col-md-6"><a href="/books"><input class="btn btn-sm btn-danger btn-block col-md-6"  value='Books'/></a>
       </div>
-      <div class="col-md-6"><a href="/authors"><input class="btn btn-sm btn-primary btn-block col-md-4"  value='Authors'/></a> 
+      <div class="col-md-6"><a href="/authors"><input class="btn btn-sm btn-danger btn-block col-md-4"  value='Authors'/></a> 
       </div>
 </div>
 </div>  
