--- a/src/server/views/authors.html
+++ b/src/server/views/authors.html
@@ -8,13 +8,33 @@
   <div class="container">
 
   {% for title in authors %}
-    <a href="/authors/{{title.id}}/edit"><button>edit</button></a>
-    <a href="/authors/{{title.id}}/delete"><button>remove</button></a>
- 	<a href="/authors/{{title.id}}"><img src="{{ title.image }}"></a>
-    <h1>{{ title.name }}</h1>
-    <h4>{{ title.biography }}</h4>
-
-    <a href="/books/{{title.id}}"><h4>{{ title.title }}</h4></a>
+     
+    <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
+	<div class="row panel">
+		<div class="col-md-4 bg_blur ">
+			<a href="/authors/{{title.id}}"><img src="{{ title.image }}" class="template_img hidden-xs"></a>
+		</div>
+        <div class="col-md-8  col-xs-12">
+           <div class="header">
+                <h1>{{title.name}}</h1>
+                <span>{{title.biography }}</span>
+                <h3><a href="/books/{{title.id}}">{{title.title}}</a></h3>
+           </div>
+        </div>
+    </div>   
+    
+	<div class="row nav">    
+        <div class="col-md-4"></div>
+        <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px;">
+         
+            <div class="col-md-6 col-xs-6 well"><i class="fa fa-weixin fa-lg"></i>     <a href="/authors/{{title.id}}/edit">Edit</a>
+            </div>
+            <div class="col-md-6 col-xs-6 well"><i class="fa fa-heart-o fa-lg"></i>     <a href="/authors/{{title.id}}/delete">Remove</a>
+            </div>
+    
+        </div>
+    </div>
+</div>
 
 {% endfor %}
   </div>
