--- a/src/server/views/newauthor.html
+++ b/src/server/views/newauthor.html
@@ -39,4 +39,82 @@
 
 </section>
 
+
+<!-- <form method="POST" action="/authors/new">
+
+<div class="container">
+  </div>
+      <div class="container">
+
+        <h2>Add New Book</h2>
+      </div>
+      
+  <div class="container" >
+    <div class="row">
+      <div class="col-xs-12 col-md-4 col-lg-4">
+            <div class="input-group input-group-sm">
+              <span class="input-group-addon" id="sizing-addon3">Author's Name</span>
+              <input type="text" name="name" class="form-control shipping" aria-describedby="sizing-addon3">
+            </div>
+      </div>
+
+      <div class= "col-xs-12 col-md-4 col-lg-4">
+        <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="sizing-addon3">Author's Image URL</span>
+            <input type="text" name="image" class="form-control shipping" aria-describedby="sizing-addon3">
+            </div>
+      </div>
+        <div class= "col-xs-12 col-md-4 col-lg-4">
+        <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="sizing-addon3">Author's Biography</span>
+            <input type="text" name="biography" class="form-control shipping" aria-describedby="sizing-addon3">
+            </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-6 col-lg-6">
+            <div class="input-group input-group-sm">
+              <span class="input-group-addon" id="sizing-addon3">Book's Title</span>
+              <input type="text" name="title" class="form-control shipping" aria-describedby="sizing-addon3" id="shipAdd1">
+            </div>
+      </div>
+      <div class= "col-xs-12 col-md-6 col-lg-6">
+        <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="sizing-addon3">Book's Genre</span>
+            <input type="text" name="genre" class="form-control shipping" aria-describedby="sizing-addon3">
+            </div>
+      </div>
+      </div>
+      </div>
+   <div class="container">   
+    <div class="row">  
+      <div class= "col-xs-12 col-md-6 col-lg-6">
+        <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="sizing-addon3">Book's Image URL</span>
+            <input type="text" name="image" class="form-control shipping" aria-describedby="sizing-addon3" >
+            </div>
+      </div>
+      <div class= "col-xs-12 col-md-6 col-lg-6">
+        <div class="input-group input-group-sm">
+            <span class="input-group-addon" id="sizing-addon3">Book's Description</span>
+            <input type="text" name="description" class="form-control shipping" aria-describedby="sizing-addon3" id="shipAdd2">
+            </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class="container">
+   <div class="row">
+     <button type="submit" class="btn btn-default btn-sm" id="button">
+      <span class="glyphicon glyphicon-unchecked" aria-hidden="true"></span> SUBMIT
+     </button>
+  </div>
+ </div>
+
+</form> -->
 {% endblock %}
