--- a/src/server/views/newbook.html
+++ b/src/server/views/newbook.html
@@ -4,135 +4,80 @@
 
 
 {% block content %}
-<!-- <section>
-
-<div class="container">
-<form method="POST" action="/books/new">
-<h3>Title</h3>
-<input type="text" placeholder="Title" name="title"></input>
-
-<h3>Genre</h3>
-<input type="location" placeholder="Genre" name="genre"></input>
-
-<br>
-
-<h3>Image</h3>
-<input type="cuisine" placeholder="Image URL" name="image"></input>
-
-
-<h3>Description</h3>
-  <div class="form-group">
-    <label for="inputlg"></label>
-    <input class="form-control input-lg" id="inputlg" name="description" type="text">
-  </div>
-
-  <h3>Author</h3>
-<input type="cuisine" placeholder="Author" name="author"></input>
-
-<h3>Author's Image</h3>
-<input type="cuisine" placeholder="Image URL" name="image" ></input>
-
-
-<h3>Author's Biography</h3>
-  <div class="form-group">
-    <label for="inputlg"></label>
-    <input class="form-control input-lg" id="inputlg" name="biography" type="text">
-  </div>
-
-<br>
-<br>
-      <input class="btn btn-md btn-primary btn-block" type="submit" value='Submit'/>
-      
-
-
-</form>
-</div>
-
-</section> -->
-
 
 <form method="POST" action="/books/new">
 
 <div class="container">
-    <hr>
   </div>
-      <div class="container" id="shipping">
+      <div class="container">
 
         <h2>Add New Book</h2>
       </div>
-      <!-- Names for Shipping
- -->
-  <div class="container" id="names">
+      
+  <div class="container" >
     <div class="row">
       <div class="col-xs-12 col-md-4 col-lg-4">
             <div class="input-group input-group-sm">
-              <span class="input-group-addon" id="sizing-addon3">Title</span>
-              <input type="text" name="title" class="form-control shipping" aria-describedby="sizing-addon3" id="shipFirstNm">
+              <span class="input-group-addon" id="sizing-addon3">Book's Title</span>
+              <input type="text" name="title" class="form-control shipping" aria-describedby="sizing-addon3">
             </div>
       </div>
 
       <div class= "col-xs-12 col-md-4 col-lg-4">
         <div class="input-group input-group-sm">
-            <span class="input-group-addon" id="sizing-addon3">Genre</span>
-            <input type="text" name="genre" class="form-control shipping" aria-describedby="sizing-addon3" id="shipLastNm">
+            <span class="input-group-addon" id="sizing-addon3">Book's Genre</span>
+            <input type="text" name="genre" class="form-control shipping" aria-describedby="sizing-addon3">
             </div>
       </div>
         <div class= "col-xs-12 col-md-4 col-lg-4">
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3">Author's Name</span>
-            <input type="text" name="author" class="form-control shipping" aria-describedby="sizing-addon3" id="shipComp">
+            <input type="text" name="author" class="form-control shipping" aria-describedby="sizing-addon3">
             </div>
 
       </div>
     </div>
   </div>
-  <br>
-  <br>
 
-<!--       Address line for shipping
- -->
-  <div class="container" id="address">
+  <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 col-lg-6">
             <div class="input-group input-group-sm">
-              <span class="input-group-addon" id="sizing-addon3">Description</span>
+              <span class="input-group-addon" id="sizing-addon3">Book's Description</span>
               <input type="text" name="description" class="form-control shipping" aria-describedby="sizing-addon3" id="shipAdd1">
             </div>
       </div>
       <div class= "col-xs-12 col-md-6 col-lg-6">
         <div class="input-group input-group-sm">
-            <span class="input-group-addon" id="sizing-addon3">Book Image URL</span>
+            <span class="input-group-addon" id="sizing-addon3">Book's Image URL</span>
             <input type="text" name="image" class="form-control shipping" aria-describedby="sizing-addon3" id="shipAdd2">
             </div>
       </div>
     </div>
   </div>
-  <br>
-  <br>
-
-   <!--    State, Zipcode, and button to copy all shipping information to Billing -->
-
-   <div class="container" id="state">
+  
+   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6 col-lg-6">
             <div class="input-group input-group-sm">
               <span class="input-group-addon" id="sizing-addon3">Author's Image URL</span>
-              <input type="text" name="image" class="form-control shipping" aria-describedby="sizing-addon3" id="shipSt">
+              <input type="text" name="image" class="form-control shipping" aria-describedby="sizing-addon3" >
             </div>
       </div>
       <div class= "col-xs-12 col-md-6 col-lg-6">
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3">Author's Description</span>
-            <input type="text" name="biography" class="form-control shipping" aria-describedby="sizing-addon3" id="shipZip">
+            <input type="text" name="biography" class="form-control shipping" aria-describedby="sizing-addon3">
       </div>
     </div>
   </div>
-  <br>
-  <br>
+  
+  <div class="container">
   <div class="row">
   <button type="submit" class="btn btn-default btn-sm" id="button">
   <span class="glyphicon glyphicon-unchecked" aria-hidden="true"></span> SUBMIT
 </button>
+</div>
 </div>
 </div>
 
