--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -57,8 +57,7 @@ body {
 font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 font-size: 14px;
 line-height: 1.42857143;
-/*color: #fff;
-*/background-color: #F1F1F1;
+background-color: #F1F1F1;
 }
 
 .bg_blur{
